# KurentoChroma

./: CMakeLists.txt  README.md
src/gst-plugins/chroma/: CMakeLists.txt  kmschroma.c
